# strata-foundry

./: .gitignore  README.md  index.html  package-lock.json  package.json
crates/strata-bridge/: Cargo.toml
crates/strata-bridge/src/: lib.rs
docs/: executor-consumer-feedback.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: BranchSwitcher.tsx  DiffView.tsx  GraphCanvas.tsx  JsonTree.tsx  KeyTree.tsx  Sidebar.tsx  SpaceSwitcher.tsx  Welcome.tsx
src/features/branches/: BranchesView.tsx
src/features/data/: DataView.tsx
src/features/events/: EventsView.tsx
src/features/generation/: GenerationView.tsx
src/features/graph/: GraphView.tsx
src/features/inference/: InferenceView.tsx
src/features/json/: JsonView.tsx
src/features/kv/: KvView.tsx
src/features/models/: ModelsView.tsx
src/features/search/: SearchView.tsx
src/features/vector/: VectorView.tsx
src/lib/: arrow.ts  branch.ts  dialog.ts  event.ts  graph.ts  inference.ts  json.ts  keytree.ts  kv.ts  sample.ts  search.ts  space.ts  strata.ts  types.ts  value.ts  vector.ts
src/state/: connection.tsx  databases.tsx
