[package]
name = "strata-foundry"
version = "0.1.0"
description = "Strata Foundry — desktop explorer for StrataDB"
authors = ["Strata"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin (a Windows quirk).
name = "strata_foundry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strata-bridge = { path = "../crates/strata-bridge" }
