[package]
name = "strata-foundry"
version = "0.1.0"
description = "Strata Foundry — desktop explorer for StrataDB"
authors = ["Strata"]
edition = "2021"

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin (a Windows quirk).
name = "strata_foundry_lib"
# Desktop links this as an rlib into the bin. The mobile crate-types
# (staticlib/cdylib) are dropped because on Linux, linking llama.cpp's non-PIC
# static lib (pulled in by the `embed` feature) into a cdylib fails with
# `relocation R_X86_64_PC32 against 'stderr'`. The rlib -> PIE-exe path links
# cleanly. Re-add them (and build llama.cpp with -fPIC) when targeting mobile.
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strata-bridge = { path = "../crates/strata-bridge" }
